# poke-krust-edition

./: .gitignore  Cargo.toml  README.md
pokekotlin/: README.md  build.gradle  local.properties
pokekotlin/resources/: application.conf
pokekotlin/src/: Application.kt  RootRoute.kt
pokerust/: Cargo.toml  README.md
pokerust/src/: lib.rs  main.rs
pokerust/src/phrases/: mod.rs
pokerust/src/phrases/modules/: mod.rs
pokerust/src/phrases/modules/english/: mod.rs
pokerust/src/phrases/modules/spanish/: mod.rs
pokerust/src/phrases/traits/: factory.rs  greetings.rs  lookup.rs  mod.rs
pokerust/src/server/models/: animal.rs
pokerust/src/server/routes/orders/: mod.rs
