[package]
name = "poke-rust-edition"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/vxcamiloxv/poke-rust-edition"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["pokemon", "graphql", "api"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pokere"
path = "src/main.rs"

[dependencies]
clap = "2.33"
juniper = "0.14.2"
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
